[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "modal-ssh"
version = "0.1.0"
description = "A simple python package for ssh'ing into a modal container"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "HP", email = "hprjdk@gmail.com"},
]
dependencies = [
    "modal>=0.7",
]

[project.scripts]
modal-ssh = "modal_ssh.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["modal_ssh"]


[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
] 